# taas

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API.md  Containerfile  Makefile  README.md  compose.yaml  entrypoint.sh  log_config.json  pyproject.toml  test_comprehensive.py
.github/workflows/: release.yml  test.yml  version-bump.yml
docs/superpowers/plans/: 2026-06-20-async-download-endpoint.md  2026-06-20-version-based-image-tagging.md
docs/superpowers/specs/: 2026-06-20-async-download-endpoint-design.md  2026-06-20-version-based-image-tagging-design.md
scripts/: workers.py
src/: main.py  monitoring.py
src/api/: config.py  v1_routes.py
src/db/: queue.py  schema.py
src/tts/: engine.py
tests/: conftest.py  test_thread_safety.py
